2014-02-26  Matthew Mundell <matthew.mundell@greenbone.net>

	Show or hide edit dialog elements according to the availability of
	commands.

	* src/gsad_omp.c (get_many, edit_alert, edit_target): Only get resources
	if the relevant commands are available.

	* src/html/classic/omp.xsl (filter-window-part): Make fields depend on
	command access.
	(task [details]): Make import window depend on command access.
	(html-edit-task-form): Hide optional fields according to availability
	of commands.  Make import window depend on command access.
	(html-create-alert-form): Correct op checks.
	(html-edit-alert-form, html-edit-target-form): Hide optional fields
	according to availability of commands.
	(get_my_settings, edit_my_settings): Check for filter commands.

2014-02-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (html-create-target-form)
	(html-edit-target-form): Remove colon from Alive Test for consistency.

2014-02-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (html-create-target-form): Move Comment up
	to match other pages.

2014-02-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/omp.xsl (new_task, html-create-user-form): Use --
	as option value, for consistency.

2014-02-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (main): Remove stray else that was hiding the Copyright
	line with --version and --debug-tls.

2014-02-25  Matthew Mundell <matthew.mundell@greenbone.net>

	Show or hide dialog elements according to the availability of commands.

	* src/gsad_omp.c (new_target): Only get credentials, locators and
	port lists if the relevant commands are available.

	* src/html/classic/omp.xsl (restore-icon): Check if command available.
	(user-tags-window-checked): New function.  From user-tags-window.
	(user-tags-window): Check if command is available.
	(list-window): Check command for wizard icon.
	(new-task, html-create-alert-form, html-create-target-form)